src/app.scss
@charset "UTF-8";

/* =========================================
 =========================================
 ======== BOOTSTRAP.CSS =======================
 =========================================
 ========================================= */

// Core variables and mixins
@import "~bootstrap-sass/assets/stylesheets/bootstrap/variables";
@import "~bootstrap-sass/assets/stylesheets/bootstrap/mixins";

// Reset and dependencies
@import "~bootstrap-sass/assets/stylesheets/bootstrap/normalize";

// Core CSS
@import "~bootstrap-sass/assets/stylesheets/bootstrap/scaffolding";
@import "~bootstrap-sass/assets/stylesheets/bootstrap/grid";
@import "~bootstrap-sass/assets/stylesheets/bootstrap/forms";
@import "~bootstrap-sass/assets/stylesheets/bootstrap/buttons";

// Components
@import "~bootstrap-sass/assets/stylesheets/bootstrap/component-animations";
@import "~bootstrap-sass/assets/stylesheets/bootstrap/dropdowns";
@import "~bootstrap-sass/assets/stylesheets/bootstrap/button-groups";
@import "~bootstrap-sass/assets/stylesheets/bootstrap/input-groups";
@import "~bootstrap-sass/assets/stylesheets/bootstrap/navs";
@import "~bootstrap-sass/assets/stylesheets/bootstrap/navbar";
@import "~bootstrap-sass/assets/stylesheets/bootstrap/alerts";

// Components w/ JavaScript
@import "~bootstrap-sass/assets/stylesheets/bootstrap/modals";
@import "~bootstrap-sass/assets/stylesheets/bootstrap/carousel";

/* =========================================
=========================================
======== APP.CSS =======================
=========================================
=========================================*/
@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,700);

body {
  font-family: "Roboto", Helvetica, Arial, sans-serif;
  background-color: #F6F7F8;
}

::selection {
  background: tomato;
}

::-moz-selection {
  background: tomato;
}

a.anchor {
  display: block;
  position: relative;
  top: -60px;
  visibility: hidden;
}

a.btn-blue-rounded {
  display: inline-block;
  text-decoration: none;
  background-color: #267DDD;
  color: white !important;
  cursor: pointer;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 20px;
  line-height: 50px;
  text-align: center;
  margin: 0;
  height: 50px;
  padding: 0 33px;
  border-radius: 25px;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: bold;
}

.dark-bg {
  background-color: rgb(60, 60, 60);
}

.pull-right {
  float: right;
}

.white-text {
  color: #fff;
}

h3,
h4 {
  font-weight: bold;
  line-height: 1.5em;
  margin: 0;
}

h3 {
  font-size: 2.5rem !important;
  letter-spacing: 6px;
  margin: 40px 0 20px;
}
@media(max-width: 410px) {
  h3 {
    font-size: 1.5rem !important;
  }
}

h4 {
  font-size: 1.8rem;
  letter-spacing: 1px;
}

.btn,
.form-control {
  border-radius: 0;
}

.btn {
  &.disabled {
    opacity: .3 !important;
    background: #efefef !important;
    pointer-events: initial !important;
  }

  &.btn-custom {
    color: white !important;
    border-color: #E81035 !important;
    background: #E81035 !important;
    text-transform: uppercase;
    font-weight: bold;
    letter-spacing: 1px;

    &:hover {
      background: #D9534F !important;
      color: #fff !important;
      border-color: #D9534F !important;
      background: rgba(0, 0, 0, .3);
    }
  }
}

.fixed-navbar {
  section.custom-navbar {
    position: fixed;
    top: 0;

    .navbar {
      .btn {
        opacity: 1;
      }
    }
  }

  section.about {
    padding-top: 30px;
  }
}

.content-header-with-options {
  display: flex;
  align-items: center;

  position: relative;
  z-index: 1;

  // if its dropdown child is not open
  &.expanded-filter-dropdown {
    z-index: 2;
  }

  flex-direction: column;
  align-items: flex-start;
  @media(min-width: 620px) {
    flex-direction: row;
    align-items: initial;
  }

  > div:nth-last-child(1) {
    flex: 2;
    text-align: right;
    z-index: 1;
    padding-top: 0;
    margin: -10px 0 25px -12px;
    @media(min-width: 620px) {
      padding-top: 19px;
      margin: initial;
    }

    .filter {
      a {
        text-decoration: none;
        padding: 15px;
      }

      a.active {
        background-color: #efefef;
      }
    }
  }

  .content-btn-group {}
}

.container {
  color: #777;
  font-size: 17px;
  line-height: 27px;
}

.output-msg {
  text-align: center;
  padding: 53px;
}

.content-panel {
  border: solid 1px #efefef;
  padding: 20px;
  border-radius: 6px;
  background-color: #fff;
  position: relative;

  -webkit-transition: box-shadow .25s;
  transition: box-shadow .25s;

  &:hover {
    -webkit-box-shadow: 1px 1px 22px -1px rgba(0, 0, 0, 0.1);
    -moz-box-shadow: 1px 1px 22px -1px rgba(0, 0, 0, 0.1);
    box-shadow: 1px 1px 22px -1px rgba(0, 0, 0, 0.1);
    top: -1px;
  }
}

.hidden {
  opacity: 0;
}

